i did so many things